[package]
name = "kovi-plugin-ai"
version = "0.1.0"
edition = "2024"

description = "kovi plugin"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yiranxiaohui/kovi-plugin-ai"
repository = "https://github.com/yiranxiaohui/kovi-plugin-ai"
documentation = "https://docs.rs/kovi-plugin-ai"

[dependencies]
kovi = ">=0.12.6"
rig-core = "0.27.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.23"